# Grassmann-Averages-PCA

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt
applications/: video_processing.cpp  video_processing_grassmann_pca.cpp  video_processing_pca.cpp  video_processing_trimmed_grassmann_pca.cpp
doc/: Doxyfile  main.md
extensions/: FindMatlab.cmake  FindMatlab_TestsRedirect.cmake  MatlabLinuxVisibility.map  MatlabOSXVisilibity.map  MatlabTestsRedirect.cmake  grassmann_pca.m  grassmann_pca_benches.m  grassmann_pca_benches_plots.m  grassmann_pca_trimmed_benches.m  grassmannpca.m  grassmannpca.m.txt  installer_welcome.txt  matlab.cpp  matlab_wrapper.c.template  matlab_wrapper.cpp.template  robustpca_m.m
include/: grassmann_pca.hpp  grassmann_pca_mpi.hpp  grassmann_pca_with_trimming.hpp  robust_pca.hpp  robust_pca_stable_trimming.hpp  robust_pca_trimmed.hpp  robust_pca_trimming.hpp
include/private/: boost_ublas_external_storage.hpp  boost_ublas_matlab_helper.hpp  boost_ublas_matrix_helper.hpp  boost_ublas_row_iterator.hpp  chunks_processor.hpp  em_pca.hpp  simple_pca.hpp  utilities.hpp
src/: grassmann_pca.cpp  robust_pca.cpp
test/: example_grassmannpca.cpp  example_robustpca.cpp  fast_acos.cpp  grassmannpca_matlab_performance_unit_tests.m  grassmannpca_matlab_unit_tests.m  mat_test_desired_output.csv  mat_test_init_vectors.csv  matlab_unit_tests.m  robustpca_matlab_performance_unit_tests.m  robustpca_matlab_unit_tests.m  test.m  test2.m  test_client_function.cpp  test_empca.cpp  test_faster_acos.cpp  test_grassmannpca.cpp  test_grassmannpca_trimming.cpp  test_grassmannpca_trimming_from_file.cpp  test_k_first.cpp  test_main.cpp  test_main.hpp  test_mus_proximity.cpp  test_robust_pca.cpp  test_robust_pca_trimmed.cpp  test_robust_pca_trimming.cpp  test_robust_pca_trimming_from_file.cpp  test_row_proxy.cpp  test_simplepca.cpp
